force-app/main/default/objects/Registration_Snapshot__c/fields/RegBusiness_State_Province__c.field-meta.xml
<CustomField>
    <fullName>RegBusiness_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reg Bus State/Province</label>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Registration Snapshots</relationshipLabel>
    <relationshipName>Registration_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>