force-app/main/default/objects/Registration_Snapshot__c/fields/Registered_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Name__c</fullName>
    <label>Registered Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>