force-app/main/default/objects/Registration_Snapshot__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Registration Snapshots</relationshipLabel>
    <relationshipName>Registration_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>