force-app/main/default/objects/Registration_Snapshot__c/fields/Registration_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Completed_Date__c</fullName>
    <label>Registration Completed Date</label>
    <type>DateTime</type>
</CustomField>