force-app/main/default/objects/Registration_Snapshot__c/fields/Registration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Registration_Stage__c</fullName>
    <label>Registration Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Welcome page</fullName>
            </value>
            <value>
                <fullName>Business Details</fullName>
            </value>
            <value>
                <fullName>Financial Set up</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Pill5</fullName>
            </value>
            <value>
                <fullName>Pill 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>