force-app/main/default/objects/Registration_Snapshot__c/fields/Registration_Started__c.field-meta.xml
<CustomField>
    <fullName>Registration_Started__c</fullName>
    <label>Registration Started</label>
    <type>DateTime</type>
</CustomField>