force-app/main/default/objects/Registration_Snapshot__c/fields/Registration_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Registration_Sub_Stage__c</fullName>
    <label>Registration Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Details</fullName>
            </value>
            <value>
                <fullName>Product Selection</fullName>
            </value>
            <value>
                <fullName>Overview</fullName>
            </value>
            <value>
                <fullName>Business Details</fullName>
            </value>
            <value>
                <fullName>Address Details</fullName>
            </value>
            <value>
                <fullName>Signatory Details</fullName>
            </value>
            <value>
                <fullName>Beneficial Owners</fullName>
            </value>
            <value>
                <fullName>Business Directors</fullName>
            </value>
            <value>
                <fullName>Travel Group Details</fullName>
            </value>
            <value>
                <fullName>Financial Accounts</fullName>
            </value>
            <value>
                <fullName>Review/Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>