force-app/main/default/objects/Registration_Snapshot__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <label>Risk Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>