force-app/main/default/objects/Registration_Snapshot__c/fields/Risk_Rating_File_Attached__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_File_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Rating File Attached</label>
    <type>Checkbox</type>
</CustomField>