force-app/main/default/objects/Registration_Snapshot__c/fields/Risk_Rating_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Review_Required__c</fullName>
    <formula>ISPICKVAL(Account__r.Due_Diligence_Risk_Rating__c, &#39;High&#39;) &amp;&amp; (Risk_Rating__c == &#39;Low&#39; || Risk_Rating__c == &#39;Medium&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Rating Review Required</label>
    <type>Checkbox</type>
</CustomField>