force-app/main/default/objects/Registration_Snapshot__c/fields/Screening__c.field-meta.xml
<CustomField>
    <fullName>Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screening</label>
    <type>Checkbox</type>
</CustomField>