force-app/main/default/objects/Registration_Snapshot__c/fields/Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type__c</fullName>
    <label>Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate – Advertising</fullName>
            </value>
            <value>
                <fullName>Corporate - General Payables</fullName>
            </value>
            <value>
                <fullName>Corporate – Google</fullName>
            </value>
            <value>
                <fullName>Corporate - Tax Only</fullName>
            </value>
            <value>
                <fullName>Funding Only</fullName>
            </value>
            <value>
                <fullName>eNett Internal</fullName>
            </value>
            <value>
                <fullName>Mixed - Travel and Corporate Spend</fullName>
            </value>
            <value>
                <fullName>Travel - Accommodation Only</fullName>
            </value>
            <value>
                <fullName>Travel - Airlines Only</fullName>
            </value>
            <value>
                <fullName>Travel – General</fullName>
            </value>
            <value>
                <fullName>Travel - Cruises Only</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Office Supplies</fullName>
            </value>
            <value>
                <fullName>Demonstration</fullName>
            </value>
            <value>
                <fullName>eNett IT Testing</fullName>
            </value>
            <value>
                <fullName>Client Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>