force-app/main/default/objects/Registration_Snapshot__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>