force-app/main/default/objects/Registration_Snapshot__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus State/Province</label>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Registration Snapshots (State/Province)</relationshipLabel>
    <relationshipName>Registration_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>