force-app/main/default/objects/Registration_Snapshot__c/fields/Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval__c</fullName>
    <label>Submitted for Approval</label>
    <type>Date</type>
</CustomField>