force-app/main/default/objects/Registration_Snapshot__c/fields/Subscription_Fee_Currency__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee_Currency__c</fullName>
    <label>Subscription Fee Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>