force-app/main/default/objects/Registration_Snapshot__c/fields/Subscription_Fee_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee_Symbol__c</fullName>
    <label>Subscription Fee Symbol</label>
    <length>5</length>
    <type>Text</type>
</CustomField>