force-app/main/default/objects/Registration_Snapshot__c/fields/SWIFT_BIC__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_BIC__c</fullName>
    <label>SWIFT / BIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>