force-app/main/default/objects/Registration_Snapshot__c/fields/Trading_Name_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trading Name</label>
    <type>Checkbox</type>
</CustomField>