force-app/main/default/objects/Registration_Snapshot__c/fields/VAN_Bank_Account_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>VAN_Bank_Account_Validation_Error__c</fullName>
    <formula>AND(INCLUDES(Product__c, &#39;VANs&#39;), Active_Funding_Account_Count__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAN Bank Account Validation Error</label>
    <type>Checkbox</type>
</CustomField>