force-app/main/default/objects/Registration_Snapshot__c/fields/VANs__c.field-meta.xml
<CustomField>
    <fullName>VANs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From Lead</description>
    <label>VANs</label>
    <type>Checkbox</type>
</CustomField>