force-app/main/default/objects/Registration_Snapshot__c/fields/VANs_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>VANs_Subscription_Fee__c</fullName>
    <description>The monthly price of VANs for the Customer</description>
    <label>VANs Subscription Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>