force-app/main/default/objects/Registration_Snapshot__c/fields/Ver_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Ver_Business_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ver Business Address</label>
    <type>Checkbox</type>
</CustomField>