force-app/main/default/objects/Registration_Snapshot__c/fields/Ver_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Ver_Business_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ver Business Number</label>
    <type>Checkbox</type>
</CustomField>