force-app/main/default/objects/Registration_Snapshot__c/fields/Ver_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Ver_Company_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ver Company Name</label>
    <type>Checkbox</type>
</CustomField>