force-app/main/default/objects/Registration_Snapshot__c/fields/Ver_PEP_Principal_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Ver_PEP_Principal_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ver_PEP_Principal_Signatory__c</label>
    <type>Checkbox</type>
</CustomField>