force-app/main/default/objects/Registration_Snapshot__c/fields/Ver_Principal_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Ver_Principal_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ver Principal Signatory</label>
    <type>Checkbox</type>
</CustomField>