force-app/main/default/objects/Registration_Snapshot__c/fields/VerA_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>VerA_Business_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VerA Business Number</label>
    <type>Checkbox</type>
</CustomField>