force-app/main/default/objects/Registration_Snapshot__c/fields/VerA_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>VerA_Company_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VerA Company Name</label>
    <type>Checkbox</type>
</CustomField>