force-app/main/default/objects/Registration_Snapshot__c/fields/VerA_Principal_Signatory__c.field-meta.xml
<CustomField>
    <fullName>VerA_Principal_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VerA Principal Signatory</label>
    <type>Checkbox</type>
</CustomField>