force-app/main/default/objects/Registration_Snapshot__c/fields/VerA_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>VerA_Trading_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VerA Trading Name</label>
    <type>Checkbox</type>
</CustomField>