force-app/main/default/objects/Registration_Snapshot__c/fields/verFlag_DR__c.field-meta.xml
<CustomField>
    <fullName>verFlag_DR__c</fullName>
    <inlineHelpText>Flag values: 
0 - No verification 
1 - Each Director has one or more verifications but at least one verification has no attachments 
2 - Each Director has at least one verification and all verifications contain at least one attachment</inlineHelpText>
    <label>verFlag_DR</label>
    <summaryForeignKey>Snapshot_Director_Association__c.Registration_Snapshot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>