force-app/main/default/objects/Registration_Snapshot__c/fields/verPEPFlag_DR__c.field-meta.xml
<CustomField>
    <fullName>verPEPFlag_DR__c</fullName>
    <inlineHelpText>Flag values: 
0 - No verification 
1 - Each Director has at least one PEP verifications but one or more verifications has no attachments 
2 - Each Director has at least one PEP verifications which each contain at least one attachment</inlineHelpText>
    <label>verPEPFlag_DR</label>
    <summaryForeignKey>Snapshot_Director_Association__c.Registration_Snapshot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>