force-app/main/default/objects/Registration_Snapshot__c/recordTypes/Registration_Snapshot.recordType-meta.xml
<RecordType>
    <fullName>Registration_Snapshot</fullName>
    <active>true</active>
    <label>Registration Snapshot</label>
</RecordType>